--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,28 @@
-server.port=8080
+spring.profiles.active=dev
+logging.level.com.level=DEBUG
 
-logging.level.com.port.www=DEBUG
-
-## Spring Datasource
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://cas900.cafe24.com/cas900?characterEncoding=UTF-8&serverTimezone=UTC
-#spring.datasource.username=cas900
-#spring.datasource.password=blue5630!
+# Spring Datasource
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://cas900.cafe24.com/cas900?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=cas900
+spring.datasource.password=blue5630!
 
 # Mybatis settings
 mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.port.www.model
+mybatis.type-aliases-package=com.port.www.vo
 mybatis.configuration.return-instance-for-empty-row=true
 
-# image
-image.upload.dir=/src/main/resources/static/images/upload/
-
-# resource
-resources.uri-path=/upload
-resources.location=/src/main/resources/static/images/upload/
-file.synchronize.prod=false
-
+server.servlet.jsp.init-parameters.development=true
+spring.resources.static-location=classpath:/static/**
+devtools.livereload.enabled=true
 
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 
+# ggoma.shop FileZilla ??? ???? ( ?????? ?? ???? ?? )
+image.upload.dir=/cas900/tomcat/webapps/upload
 
-
+#resources
+resources.uri-path=/upload
+resources.location=http://www.ggoma.shop/cas900/tomcat/webapps/upload/
