--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,15 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
+    - name: Deploy Prod use SCP
+      uses: appleboy/scp-action@master
+      with:
+        username: ubuntu
+        host: ${{ secrets.HOST }}
+        password: ${{ secrets.PASSWORD }}
+        source: "./build/libs/*.war"
+        target: "/root"
+        strip_components: 2
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4        
       with:
