--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Deploy Prod use SCP
       uses: appleboy/scp-action@master
       with:
-        username: ubuntu
+        username: ${{ secrets.USERNAME }}
         host: ${{ secrets.HOST }}
         password: ${{ secrets.PASSWORD }}
         source: "./build/libs/*.war"
