--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,11 +35,12 @@ jobs:
       with:
         arguments: build
     - name: Deploy Prod use SCP
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v0.1.4
       with:
+        host: ${{ secrets.HOST }}          
         username: ${{ secrets.USERNAME }}
-        host: ${{ secrets.HOST }}
         password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
         source: "./build/libs/*.war"
         target: "/root"
         
