--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,6 +43,7 @@ jobs:
         port: ${{ secrets.PORT }}
         source: "build/libs/*.war"
         target: "/root"
+        strip_components: 2
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4        
       with:
