--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,13 +35,13 @@ jobs:
       with:
         arguments: build
     - name: Deploy Prod use SCP
-      uses: appleboy/scp-action@v0.1.4
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}          
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        source: "*.war"
+        source: "./build/libs/*.war"
         target: "/root"
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4        
