--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,15 +34,15 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
-    - name: Deploy Prod use SCP
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}          
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        source: "./build/libs/*.war"
-        target: "/root"
+    # - name: Deploy Prod use SCP
+    #   uses: appleboy/scp-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}          
+    #     username: ${{ secrets.USERNAME }}
+    #     password: ${{ secrets.PASSWORD }}
+    #     port: ${{ secrets.PORT }}
+    #     source: "./build/libs/*.war"
+    #     target: "/root"
     - name: SSH Remote Commands
       uses: appleboy/ssh-action@v0.1.4        
       with:
