--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,9 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
+       # 전송할 파일을 담을 디렉토리 생성
+    - name: Make Directory for deliver
+      run: /pwd
     - name: Deploy Prod use SCP
       uses: appleboy/scp-action@master
       with:
