--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
         arguments: build
        # 전송할 파일을 담을 디렉토리 생성
     - name: Make Directory for deliver
-      run: pwd
+      run: cd build
     - name: Make Directory for deliver
       run: ls -al
     - name: Deploy Prod use SCP
