--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,6 +54,10 @@ jobs:
       with:
         name: project_artifact
         path: dist
+      ## 아티팩트 확인
+    - name: Show structure of downloaded files
+      run: |
+        ls -alh dist
     - name: Deploy Prod use SCP
       uses: appleboy/scp-action@master
       with:
