--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         arguments: build
        # 전송할 파일을 담을 디렉토리 생성
-    - name: Deploy Prod use SCP
+    - name: SCP War
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}          
