--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,3 +53,5 @@ jobs:
         timeout: 1s       
         script: |
           echo "테스트 출력"
+          cd build/libs/
+          cp level-0.0.1-SNAPSHOT.war /root
